@@ -8,7 +8,11 @@
 
 package org.elasticsearch.indices.recovery;
 
+import org.apache.logging.log4j.Level;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.elasticsearch.cluster.node.DiscoveryNodeRole;
+import org.elasticsearch.common.logging.Loggers;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
@@ -16,8 +20,8 @@ import org.elasticsearch.common.unit.ByteSizeUnit;
 import org.elasticsearch.common.unit.ByteSizeValue;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.Releasable;
-import org.elasticsearch.jdk.JavaVersion;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.test.MockLogAppender;
 
 import java.util.ArrayList;
 import java.util.HashSet;
@@ -32,7 +36,6 @@ import static org.elasticsearch.indices.recovery.RecoverySettings.INDICES_RECOVE
 import static org.elasticsearch.indices.recovery.RecoverySettings.INDICES_RECOVERY_MAX_CONCURRENT_SNAPSHOT_FILE_DOWNLOADS;
 import static org.elasticsearch.indices.recovery.RecoverySettings.INDICES_RECOVERY_MAX_CONCURRENT_SNAPSHOT_FILE_DOWNLOADS_PER_NODE;
 import static org.elasticsearch.indices.recovery.RecoverySettings.INDICES_RECOVERY_USE_SNAPSHOTS_SETTING;
-import static org.elasticsearch.indices.recovery.RecoverySettings.JAVA_VERSION_OVERRIDING_TEST_SETTING;
 import static org.elasticsearch.indices.recovery.RecoverySettings.NODE_BANDWIDTH_RECOVERY_DISK_READ_SETTING;
 import static org.elasticsearch.indices.recovery.RecoverySettings.NODE_BANDWIDTH_RECOVERY_DISK_WRITE_SETTING;
 import static org.elasticsearch.indices.recovery.RecoverySettings.NODE_BANDWIDTH_RECOVERY_NETWORK_SETTING;
@@ -143,12 +146,9 @@ public class RecoverySettingsTests extends ESTestCase {
             exception.getMessage(),
             containsString(
                 "Settings "
-                    + NODE_BANDWIDTH_RECOVERY_SETTINGS.stream().map(Setting::getKey).collect(Collectors.toList())
+                    + NODE_BANDWIDTH_RECOVERY_SETTINGS.stream().map(Setting::getKey).toList()
                     + " must all be defined or all be undefined; but only settings "
-                    + NODE_BANDWIDTH_RECOVERY_SETTINGS.stream()
-                        .filter(randomSettings::contains)
-                        .map(Setting::getKey)
-                        .collect(Collectors.toList())
+                    + NODE_BANDWIDTH_RECOVERY_SETTINGS.stream().filter(randomSettings::contains).map(Setting::getKey).toList()
                     + " are configured."
             )
         );
@@ -308,27 +308,13 @@ public class RecoverySettingsTests extends ESTestCase {
         );
     }
 
-    public void testDefaultMaxBytesPerSecOnColdOrFrozenNodeWithOldJvm() {
-        assertThat(
-            "Data nodes with only cold/frozen data roles have a default 40mb rate limit on Java version prior to 14",
-            nodeRecoverySettings().withRoles(randomFrom(Set.of("data_cold"), Set.of("data_frozen"), Set.of("data_cold", "data_frozen")))
-                .withJavaVersion(randomFrom("8", "9", "11"))
-                .withRandomMemory()
-                .build()
-                .getMaxBytesPerSec(),
-            equalTo(DEFAULT_MAX_BYTES_PER_SEC)
-        );
-    }
-
     public void testDefaultMaxBytesPerSecOnColdOrFrozenNode() {
         final Set<String> dataRoles = randomFrom(Set.of("data_cold"), Set.of("data_frozen"), Set.of("data_cold", "data_frozen"));
-        final String recentVersion = JavaVersion.current().compareTo(JavaVersion.parse("14")) < 0 ? "14" : null;
         {
             assertThat(
                 "Dedicated cold/frozen data nodes with <= 4GB of RAM have a default 40mb rate limit",
                 nodeRecoverySettings().withRoles(dataRoles)
                     .withMemory(ByteSizeValue.ofBytes(randomLongBetween(1L, ByteSizeUnit.GB.toBytes(4L))))
-                    .withJavaVersion(recentVersion)
                     .build()
                     .getMaxBytesPerSec(),
                 equalTo(new ByteSizeValue(40, ByteSizeUnit.MB))
@@ -339,7 +325,6 @@ public class RecoverySettingsTests extends ESTestCase {
                 "Dedicated cold/frozen data nodes with 4GB < RAM <= 8GB have a default 60mb rate limit",
                 nodeRecoverySettings().withRoles(dataRoles)
                     .withMemory(ByteSizeValue.ofBytes(randomLongBetween(ByteSizeUnit.GB.toBytes(4L) + 1L, ByteSizeUnit.GB.toBytes(8L))))
-                    .withJavaVersion(recentVersion)
                     .build()
                     .getMaxBytesPerSec(),
                 equalTo(new ByteSizeValue(60, ByteSizeUnit.MB))
@@ -350,7 +335,6 @@ public class RecoverySettingsTests extends ESTestCase {
                 "Dedicated cold/frozen data nodes with 8GB < RAM <= 16GB have a default 90mb rate limit",
                 nodeRecoverySettings().withRoles(dataRoles)
                     .withMemory(ByteSizeValue.ofBytes(randomLongBetween(ByteSizeUnit.GB.toBytes(8L) + 1L, ByteSizeUnit.GB.toBytes(16L))))
-                    .withJavaVersion(recentVersion)
                     .build()
                     .getMaxBytesPerSec(),
                 equalTo(new ByteSizeValue(90, ByteSizeUnit.MB))
@@ -361,7 +345,6 @@ public class RecoverySettingsTests extends ESTestCase {
                 "Dedicated cold/frozen data nodes with 16GB < RAM <= 32GB have a default 90mb rate limit",
                 nodeRecoverySettings().withRoles(dataRoles)
                     .withMemory(ByteSizeValue.ofBytes(randomLongBetween(ByteSizeUnit.GB.toBytes(16L) + 1L, ByteSizeUnit.GB.toBytes(32L))))
-                    .withJavaVersion(recentVersion)
                     .build()
                     .getMaxBytesPerSec(),
                 equalTo(new ByteSizeValue(125, ByteSizeUnit.MB))
@@ -372,7 +355,6 @@ public class RecoverySettingsTests extends ESTestCase {
                 "Dedicated cold/frozen data nodes with RAM > 32GB have a default 250mb rate limit",
                 nodeRecoverySettings().withRoles(dataRoles)
                     .withMemory(ByteSizeValue.ofBytes(randomLongBetween(ByteSizeUnit.GB.toBytes(32L) + 1L, ByteSizeUnit.TB.toBytes(4L))))
-                    .withJavaVersion(recentVersion)
                     .build()
                     .getMaxBytesPerSec(),
                 equalTo(new ByteSizeValue(250, ByteSizeUnit.MB))
@@ -385,13 +367,49 @@ public class RecoverySettingsTests extends ESTestCase {
         assertThat(
             "Dedicated cold/frozen data nodes should use the defined rate limit when set",
             nodeRecoverySettings().withRoles(randomFrom(Set.of("data_cold"), Set.of("data_frozen"), Set.of("data_cold", "data_frozen")))
-                .withJavaVersion(JavaVersion.current().compareTo(JavaVersion.parse("14")) < 0 ? "14" : null)
                 .withMemory(ByteSizeValue.ofBytes(randomLongBetween(1L, ByteSizeUnit.TB.toBytes(4L))))
                 .withIndicesRecoveryMaxBytesPerSec(random)
                 .build()
                 .getMaxBytesPerSec(),
             equalTo(random)
         );
+    }
+
+    public void testRecoverFromSnapshotPermitsAreNotLeakedWhenRecoverFromSnapshotIsDisabled() throws Exception {
+        final Settings settings = Settings.builder()
+            .put(INDICES_RECOVERY_USE_SNAPSHOTS_SETTING.getKey(), false)
+            .put(INDICES_RECOVERY_MAX_CONCURRENT_SNAPSHOT_FILE_DOWNLOADS.getKey(), 1)
+            .put(INDICES_RECOVERY_MAX_CONCURRENT_SNAPSHOT_FILE_DOWNLOADS_PER_NODE.getKey(), 1)
+            .build();
+
+        final ClusterSettings clusterSettings = new ClusterSettings(settings, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS);
+        final RecoverySettings recoverySettings = new RecoverySettings(settings, clusterSettings);
+        final MockLogAppender mockAppender = new MockLogAppender();
+        mockAppender.addExpectation(
+            new MockLogAppender.UnseenEventExpectation("no warnings", RecoverySettings.class.getCanonicalName(), Level.WARN, "*")
+        );
+        mockAppender.start();
+        final Logger logger = LogManager.getLogger(RecoverySettings.class);
+        Loggers.addAppender(logger, mockAppender);
+
+        try {
+            assertThat(recoverySettings.getUseSnapshotsDuringRecovery(), is(false));
+
+            for (int i = 0; i < 4; i++) {
+                assertThat(recoverySettings.tryAcquireSnapshotDownloadPermits(), is(nullValue()));
+            }
+
+            clusterSettings.applySettings(Settings.builder().put(INDICES_RECOVERY_USE_SNAPSHOTS_SETTING.getKey(), true).build());
+
+            final var releasable = recoverySettings.tryAcquireSnapshotDownloadPermits();
+            assertThat(releasable, is(notNullValue()));
+            releasable.close();
+
+            mockAppender.assertAllExpectationsMatched();
+        } finally {
+            Loggers.removeAppender(logger, mockAppender);
+            mockAppender.stop();
+        }
     }
 
     private static ByteSizeValue randomByteSizeValue() {
@@ -428,7 +446,6 @@ public class RecoverySettingsTests extends ESTestCase {
 
         private Set<String> roles;
         private ByteSizeValue physicalMemory;
-        private @Nullable String javaVersion;
         private @Nullable ByteSizeValue networkBandwidth;
         private @Nullable ByteSizeValue diskReadBandwidth;
         private @Nullable ByteSizeValue diskWriteBandwidth;
@@ -453,11 +470,6 @@ public class RecoverySettingsTests extends ESTestCase {
 
         NodeRecoverySettings withRandomMemory() {
             return withMemory(ByteSizeValue.ofBytes(randomLongBetween(ByteSizeUnit.GB.toBytes(1L), ByteSizeUnit.TB.toBytes(4L))));
-        }
-
-        NodeRecoverySettings withJavaVersion(String javaVersion) {
-            this.javaVersion = javaVersion;
-            return this;
         }
 
         NodeRecoverySettings withIndicesRecoveryMaxBytesPerSec(ByteSizeValue indicesRecoveryMaxBytesPerSec) {
@@ -511,9 +523,6 @@ public class RecoverySettingsTests extends ESTestCase {
             settings.put(TOTAL_PHYSICAL_MEMORY_OVERRIDING_TEST_SETTING.getKey(), Objects.requireNonNull(physicalMemory));
             if (roles.isEmpty() == false) {
                 settings.putList(NODE_ROLES_SETTING.getKey(), new ArrayList<>(roles));
-            }
-            if (javaVersion != null) {
-                settings.put(JAVA_VERSION_OVERRIDING_TEST_SETTING.getKey(), javaVersion);
             }
             if (indicesRecoveryMaxBytesPerSec != null) {
                 settings.put(INDICES_RECOVERY_MAX_BYTES_PER_SEC_SETTING.getKey(), indicesRecoveryMaxBytesPerSec);
